Adding missing translations

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -1,4 +1,9 @@
 {
   "tagline": "Ständige Verbesserung",
-  "ratings": "Bewertungen"
+  "ratings": "Bewertungen",
+  "composition": "Komposition",
+  "technique": "Technik",
+  "color_scheme": "Farbschema",
+  "expressiveness": "Ausdruckskraft",
+  "tilt": "Subjektive Neigung"
 }
