--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1,4 +1,9 @@
 {
   "tagline": "Continuous improvement",
-  "ratings": "Ratings"
+  "ratings": "Ratings",
+  "composition": "Composition",
+  "technique": "Technique",
+  "color_scheme": "Color Scheme",
+  "expressiveness": "Expressiveness",
+  "tilt": "Tilt"
 }
